--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
         <link rel="shortcut icon" href="img/favicon.png">
 
         <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
+        <link type="text/css" href="{% static "css/ripples.min.css" %}"href="css/ripples.min.css" rel="stylesheet">
 
         <link rel="stylesheet" type="text/css" href='http://fonts.googleapis.com/css?family=Raleway:400,600,800'>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
@@ -31,9 +32,64 @@
 
 
     <body id="top">
-        {% block page %}{%  endblock %}
+        <!-- begin:navbar -->
+        <nav class="navbar navbar-default navbar-static-top" role="navigation">
+          <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-top">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="{% url "home" %}"><img id="logo" src="{%  static "img/logos/nolemon.png" %}"></a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="navbar-top">
+              <ul class="nav navbar-nav navbar-right">
+
+                  {% block navlinks %}{% endblock %}
+
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container -->
+        </nav>
+        <!-- end:navbar -->
+        <div id="page">{% block page %}{%  endblock %}</div>
+
+        <!-- begin:footer -->
+        <div id="footer">
+          <div class="container">
+            <!-- begin:copyright -->
+            <div class="row">
+                <ul class=" pull-left navbar-link footer-nav">
+                    <li>
+                        {% block footerlinks %}{% endblock %} &nbsp; © 2015 NoLemon
+                    </li>
+                </ul>
+
+                <a href="#top" class="pull-right btn btn-warning scroltop"><i class="fa fa-arrow-up"></i></a>
+
+            </div>
+
+
+          </div>
+        </div>
+        <!-- end:footer -->
+
+        {% block modals %}{%  endblock %}
+
+        {% if not user.is_authenticated %}
+            {% include "modals/register_modal.html" %}
+            {% include "modals/signin_modal.html" %}
+        {%  endif %}
+
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script type="text/javascript" src="{% static "js/ripples.min.js"%}"></script>
+        <script type="text/javascript" src="{% static "js/material.min.js"%}"></script>
         <script type="text/javascript" src="{% static "js/jquery.backstretch.js" %}"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
