Update to search template and css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
 	========================================
 	TABLE OF CONTENT
 	========================================
-	
+
 	[1. GLOBAL STYLE]
 	[2. NAVBAR]
 	[3. HEADER]
@@ -24,7 +24,7 @@
 */
 
 
-/* 
+/*
 	==================
 	[1. GLOBAL STYLE]
 	==================
@@ -42,31 +42,31 @@ body{
 	scrollbar-face-color: #333;
 }
 
-::-moz-selection { 
-	color: #fff; 
-	text-shadow: none; 
-	background: #3498db; 
+::-moz-selection {
+	color: #fff;
+	text-shadow: none;
+	background: #3498db;
 }
 
-::-webkit-selection { 
-	color: #fff; 
-	text-shadow: none; 
-	background: #3498db; 
+::-webkit-selection {
+	color: #fff;
+	text-shadow: none;
+	background: #3498db;
 }
 
-::selection { 
-	color: #fff; 
-	text-shadow: none; 
-	background: #3498db; 
+::selection {
+	color: #fff;
+	text-shadow: none;
+	background: #3498db;
 }
 
 ::-webkit-scrollbar {
 	width: 10px;
-} 
+}
 
 ::-webkit-scrollbar-track {
 	background-color: #333;
-} 
+}
 
 ::-webkit-scrollbar-thumb {
 	background-color: #666;
@@ -74,11 +74,11 @@ body{
 	   -moz-border-radius: 2px;
 	     -o-border-radius: 2px;
 			border-radius: 2px;
-} 
+}
 
 ::-webkit-scrollbar-button {
 	display: none;
-} 
+}
 
 ::-webkit-scrollbar-corner {
 	background-color: #000000;
@@ -227,7 +227,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[2. NAVBAR]
 	==================
@@ -391,7 +391,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[3. HEADER]
 	==================
@@ -504,7 +504,7 @@ input[type="color"]:focus,
 	text-transform: uppercase;
 }
 
-/* 
+/*
 	==================
 	[4.1 SERVICE]
 	==================
@@ -900,7 +900,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[5. CONTENT]
 	==================
@@ -986,12 +986,6 @@ input[type="color"]:focus,
 	line-height: 30px;
 }
 
-.property-container{
-	margin-bottom: 30px;
-	background: #fff;
-	border: 1px solid #eee;
-}
-
 .property-image{
 	position: relative;
 	overflow: hidden;
@@ -1000,8 +994,22 @@ input[type="color"]:focus,
 .property-image img{
 	max-width: 100%;
 	width: 100%;
-	height: auto;
+    height: auto;
 }
+
+.property-type{
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    width: auto;
+    max-width: 70%;
+    padding: 5px 10px;
+    background: #1b1d2a;
+    font-weight: 500;
+    color: #fff;
+}
+
 
 .property-status{
 	position: absolute;
@@ -1012,7 +1020,7 @@ input[type="color"]:focus,
 	max-width: 70%;
 	padding: 5px 10px;
 	background: #1b1d2a;
-	font-weight: 400;
+	font-weight: 500;
 	color: #fff;
 }
 
@@ -1028,7 +1036,7 @@ input[type="color"]:focus,
 	color: #fff;
 	text-align: center;
 	font-size: 18px;
-	line-height: 22px;
+	line-height: 20px;
 	font-weight: 600;
 }
 
@@ -1049,11 +1057,19 @@ input[type="color"]:focus,
 	padding: 5px 10px;
 	background: #ffce54;
 	color: #fff;
+    text-align: center;
 }
 
 .property-features span{
 	padding: 2px 5px;
-	font-size: 13px;
+	/*font-size: 14px;*/
+    font-weight: 600;
+}
+
+.property-container{
+    margin-bottom: 30px;
+    background: #fff;
+    border: 1px solid #eee;
 }
 
 .property-content{
@@ -1067,6 +1083,7 @@ input[type="color"]:focus,
 	font-size: 20px;
 	line-height: 24px;
 	font-weight: 600;
+    word-wrap: break-word;
 }
 
 .property-content h3 small,
@@ -1145,7 +1162,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[5.1 ARTICLE]
 	==================
@@ -1159,18 +1176,18 @@ input[type="color"]:focus,
 }
 
 /* pagination */
-.pagination > li > a, 
+.pagination > li > a,
 .pagination > li > span {
 	color: #ffce54;
 	background-color: #fff;
 	border: 1px solid #ddd;
 }
 
-.pagination > .active > a, 
-.pagination > .active > span, 
-.pagination > .active > a:hover, 
-.pagination > .active > span:hover, 
-.pagination > .active > a:focus, 
+.pagination > .active > a,
+.pagination > .active > span,
+.pagination > .active > a:hover,
+.pagination > .active > span:hover,
+.pagination > .active > a:focus,
 .pagination > .active > span:focus {
 	z-index: 2;
 	color: #fff;
@@ -1280,7 +1297,7 @@ input[type="color"]:focus,
 	padding-top: 20px;
 	padding-bottom: 20px;
 	padding-left: 15%;
-	padding-right: 15%; 
+	padding-right: 15%;
 }
 
 .blog-paged > .pager li > a:hover,
@@ -1394,7 +1411,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[5.2 TEAM]
 	==================
@@ -1491,7 +1508,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[5.3 SIDEBAR]
 	==================
@@ -1675,7 +1692,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[6. TESTIMONY]
 	==================
@@ -1724,7 +1741,7 @@ input[type="color"]:focus,
     opacity: 1;
 }
 
-#testislider.carousel .active.left, 
+#testislider.carousel .active.left,
 #testislider.carousel .active.right {
 	z-index: 2;
 	opacity: 0;
@@ -1833,7 +1850,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[7. NEWS]
 	==================
@@ -1983,14 +2000,14 @@ input[type="color"]:focus,
 			border-radius: 0;
 }
 
-#content .post-meta, 
+#content .post-meta,
 .post-single .post-meta span {
 	font-size: 13px;
 	line-height: 16px;
 	color: #888;
 }
 
-#content .post-meta, 
+#content .post-meta,
 .post-single .post-meta {
 	display: block;
 	padding-top: 20px;
@@ -2131,7 +2148,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[8. SUBSCRIBE]
 	==================
@@ -2164,7 +2181,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[9. PARTNER]
 	==================
@@ -2296,7 +2313,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[10. FOOTER]
 	==================
@@ -2432,7 +2449,7 @@ input[type="color"]:focus,
 }
 
 
-/* 
+/*
 	==================
 	[11. COPYRIGHT]
 	==================
