--- a/templates/search.html
+++ b/templates/search.html
@@ -38,7 +38,6 @@
           <div class="col-md-10 col-md-offset-1 col-sm-12">
             <div class="quick-search">
               <div class="row">
-                <form role="form">
                   <div class="col-md-3 col-sm-3 col-xs-6">
                     <div class="form-group">
                         <label for="bedroom">Model</label>
@@ -53,6 +52,7 @@
                     <div class="form-group">
                         <label for="location">Make</label>
                           <select class="form-control">
+                            <option>Toyota</option>
                             <option>Buick</option>
                             <option>Chevrolet</option>
                             <option>Chrysler</option>
@@ -118,11 +118,9 @@
                     </div>
                     <div class="form-group">
                       <label for="maxprice">&nbsp;</label>
-                      <input type="submit" name="submit" value="Search Again" class="btn btn-warning btn-block">
+                      <input type="submit" name="submit" value="Search Again" id="search-button" class="btn btn-warning btn-block">
                     </div>
                   </div>
-
-                </form>
               </div>
             </div>
           </div>
@@ -149,7 +147,7 @@
               <div class="col-md-4 col-sm-4 col-xs-3">
                 <a href="search.html" class="btn btn-warning"><i class="fa fa-th"></i></a>
                 <a href="search_list.html" class="btn btn-default"><i class="fa fa-list"></i></a>
-                <span>Show <strong>6</strong> of <strong>30</strong> result.</span>
+                <span>Show <strong>6</strong> of <strong>30</strong> results.</span>
               </div>
               <div class="col-md-8 col-sm-8 col-xs-9">
                 <form class="form-inline" role="form">
@@ -158,9 +156,9 @@
                     <label class="sr-only" for="sortby">Sort by : </label>
                     <select class="form-control">
                       <option>Most Recent</option>
-                      <option>Price (Low &gt; High)</option>
-                      <option>Price (High &gt; Low)</option>
-                      <option>Most Popular (Low &gt; High)</option>
+                      <option>Lowest Price</option>
+                      <option>Highest Price</option>
+                      <option>Most Popular</option>
                     </select>
                   </div>
                   <span>Show : </span>
@@ -181,22 +179,14 @@
             </div>
             <!-- end:sorting -->
 
-
-            <!-- begin:pagination -->
-            <div class="row">
-              <div class="col-md-12">
-                <ul class="pagination">
-                  <li class="disabled"><a href="#">&laquo;</a></li>
-                  <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                  <li><a href="#">4</a></li>
-                  <li><a href="#">5</a></li>
-                  <li><a href="#">&raquo;</a></li>
-                </ul>
-              </div>
+            <!-- begin:product -->
+            <div id="ad-list" class="row">
             </div>
-            <!-- end:pagination -->
+            <div class="row text-center">
+                <img src="{% static "img/loading2.gif" %}" id="loading-indicator" style="color: yellow"/>
+            </div>
+            <!-- end:product -->
+
           </div>
           <!-- end:article -->
 
@@ -324,4 +314,8 @@
       </div>
     </div>
     <!-- end:modal-signup -->
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript" src="{% static "js/search.js" %}"></script>
 {% endblock %}
