Strip anchor from incoming HTML

--- a/templates/ad_fragment.html
+++ b/templates/ad_fragment.html
@@ -33,5 +33,5 @@
 {% endfor %}
 
 {% if next %}
-<a href="{{ next }}" id="next-link" class="jscroll-next"></a>
+<a href="{{ next }}" id="next-link"></a>
 {% endif %}
