--- a/templates/search.html
+++ b/templates/search.html
@@ -38,26 +38,22 @@
           <div class="col-md-10 col-md-offset-1 col-sm-12">
             <div class="quick-search">
               <div class="row">
+                <form role="form" id="search-form">
                   <div class="col-md-3 col-sm-3 col-xs-6">
                     <div class="form-group">
                         <label for="bedroom">Model</label>
-                          <select class="form-control">
-                            <option>Coupe</option>
-                            <option>Hatchback</option>
-                            <option>Sedan</option>
-                            <option>SUV</option>
-                            <option>Convertible</option>
+                          <select name="model" class="form-control">
+                            <option value="">Any</option>
+                            <option>Corolla</option>
+                            <option>Civic</option>
                           </select>
                     </div>
                     <div class="form-group">
                         <label for="location">Make</label>
-                          <select class="form-control">
+                          <select name="make" class="form-control">
+                            <option value="">Any</option>
                             <option>Toyota</option>
-                            <option>Buick</option>
-                            <option>Chevrolet</option>
-                            <option>Chrysler</option>
-                            <option>SUV</option>
-                            <option>Convertible</option>
+                            <option>Honda</option>
                           </select>
                     </div>
                   </div>
@@ -118,9 +114,10 @@
                     </div>
                     <div class="form-group">
                       <label for="maxprice">&nbsp;</label>
-                      <input type="submit" name="submit" value="Search Again" id="search-button" class="btn btn-warning btn-block">
+                      <input type="submit" name="submit" value="Search" id="search-button" class="btn btn-warning btn-block">
                     </div>
                   </div>
+                </form>
               </div>
             </div>
           </div>
