--- a/templates/search.html
+++ b/templates/search.html
@@ -123,15 +123,12 @@
                 </div>
               </div>
             </div>
-            <!-- begin:sorting -->
+            <!-- begin:sorting
             <div class="row sort">
               <div class="col-md-4 col-sm-4 col-xs-3">
                 <a href="search.html" class="btn btn-warning"><i class="fa fa-th"></i></a>
                 <a href="search_list.html" class="btn btn-default"><i class="fa fa-list"></i></a>
-<<<<<<< HEAD
-                <span>Show <strong>6</strong> of <strong>30</strong> results.</span>
-=======
->>>>>>> master
+
               </div>
               <div class="col-md-8 col-sm-8 col-xs-9">
                 <form class="form-inline" role="form">
@@ -161,7 +158,7 @@
                 </form>
               </div>
             </div>
-            <!-- end:sorting -->
+            end:sorting -->
 
             <!-- begin:product -->
             <div id="ad-list" class="row">
@@ -197,26 +194,6 @@
       </div>
     </div>
     <!-- end:content -->
-
-    <!-- begin:subscribe -->
-    <div id="subscribe">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-5 col-md-offset-2 col-sm-8 col-xs-12">
-            <h3>Get notified about cars matching your search</h3>
-          </div>
-          <div class="col-md-3 col-sm-4 col-xs-12">
-            <div class="input-group">
-              <input type="text" class="form-control input-lg" placeholder="Enter your mail">
-              <span class="input-group-btn">
-                <button class="btn btn-warning btn-lg" type="submit"><i class="fa fa-envelope"></i></button>
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- end:subscribe -->
 
 {% endblock %}
 
