--- a/templates/materialize_base.html
+++ b/templates/materialize_base.html
@@ -1,4 +1,3 @@
-{% load compress %}
 {% load sass_tags %}
 {% load static %}
 
@@ -11,6 +10,7 @@
 
         <title>NoLemon Inspection</title>
         <link rel="shortcut icon" href="img/favicon.png">
+        <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}" >
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="{% sass_src "materialize/sass/materialize.scss" %}" rel="stylesheet" type="text/css" />
         {% block css %}{% endblock %}
@@ -24,9 +24,8 @@
 
                 <ul id="nav-mobile" class="right">
                     <!--<li><a href="sass.html"><i class="material-icons right">search</i>Search</a></li>-->
-                    <li><a href="sass.html"><i class="material-icons right">power_settings_new</i>Sign Out</a></li>
+                    <li><a href="{% url 'inspections:logout' %}"><i class="material-icons right">power_settings_new</i>Sign Out</a></li>
                 </ul>
-
             </div>
         </nav>
         {% endblock %}
@@ -37,6 +36,16 @@
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="{%  static "materialize/js/bin/materialize.js" %}" type="text/javascript" ></script>
+
+
+       {% if messages  %}
+           <script type="text/javascript">
+             {% for message in messages %}
+                 Materialize.toast("{{ message }}", 5000, "full-size")
+             {% endfor %}
+           </script>
+       {% endif %}
+
         {% block scripts %}{% endblock %}
     </body>
 </html>
