--- a/templates/search.html
+++ b/templates/search.html
@@ -19,90 +19,69 @@
     <div id="header" class="heading" style="background-image: url({%  static "img/img01.jpg" %})">
       <div class="container">
         <div class="row">
-          <div class="col-md-10 col-md-offset-1 col-sm-12">
+          <div class="col-md-10 col-md-offset-1 col-sm-10">
             <div class="quick-search">
-              <div class="row">
-                <form role="form" id="search-form">
-                  <div class="col-md-3 col-sm-3 col-xs-6">
+              <form role="form" id="search-form">
+                <!-- Search Row-->
+                <div class="row">
+                  <div class="col-md-8 col-sm-8 col-xs-12">
                     <div class="form-group">
-                        <label for="bedroom">Model</label>
-                          <select name="model" class="form-control">
-                            <option value="">Any</option>
-                            <option>Corolla</option>
-                            <option>Civic</option>
-                          </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="location">Make</label>
-                          <select name="make" class="form-control">
-                            <option value="">Any</option>
-                            <option>Toyota</option>
-                            <option>Honda</option>
-                          </select>
+                      <label for="search">Search</label>
+                      <input type="text" name="search" placeholder="Enter search terms (e.g./ Toyota Corolla)" class="form-control">
                     </div>
                   </div>
-                  <!-- break -->
-                  <div class="col-md-3 col-sm-3 col-xs-6">
-                    <div class="form-group">
-                    <label for="bathroom">Year</label>
-                          <select class="form-control">
-                              <option>2015</option>
-                              <option>2014</option>
-                              <option>2013</option>
-                              <option>2012</option>
-                              <option>2011</option>
-                              <option>2010</option>
-                          </select>
-                    </div>
-                    <div class="form-group">
-                           <label for="status">Color</label>
-                          <select class="form-control">
+                  <div class="col-md-4 col-sm-4 col-xs-12">
+                    <label for="location">Location</label>
+                    <select name="location" class="form-control">
+                        <option value="">Any</option>
+                        <option value="Edmonton">Edmonton and area</option>
+                    </select>
+                  </div>
+                </div>
+                <!-- End Search Row-->
+                <!-- Fitler Row-->
+                <div class="row">
+                    <div class="col-md-3 col-sm-3 col-xs-12">
+                      <div class="form-group">
+                        <label for="model">Model</label>
+                        <select name="model" class="form-control">
+                          <option value="">Any</option>
+                          <option>Corolla</option>
+                          <option>Civic</option>
+                        </select>
+                      </div>
+                      <div class="form-group">
+                        <label for="make">Make</label>
+                        <select name="make" class="form-control">
+                          <option value="">Any</option>
+                          <option>Toyota</option>
+                          <option>Honda</option>
+                        </select>
+                      </div>
+                       <div class="form-group">
+                          <label for="colour">Colour</label>
+                          <select name="colour" class="form-control">
+                            <option value="">Any</option>
                             <option>Blue</option>
                             <option>Green</option>
-                              <option>Red</option>
-                              <option>Yellow</option>
+                            <option>Red</option>
+                            <option>Yellow</option>
                           </select>
+                      </div>
+                    </div>
+                    <!-- break -->
+                    </div>
+                    </div>
+                    </div>
+                    <div class="col-md-3 col-sm-3 col-xs-6">
+                      <div class="form-group">
+                        <input type="reset" name="clear" value="Clear" id="clear-button" class="btn btn-warning btn-block">
+                        <input type="submit" name="submit" value="Search" id="search-button" class="btn btn-warning btn-block">
+                      </div>
                     </div>
                   </div>
-                  <!-- break -->
-                  <div class="col-md-3 col-sm-3 col-xs-6">
-                    <div class="form-group">
-                           <label for="minprice">Min Price</label>
-                          <select class="form-control">
-                            <option>$1,000</option>
-                            <option>$2,000</option>
-                            <option>$3,000</option>
-                            <option>$4,000</option>
-                          </select>
-                    </div>
-                    <div class="form-group">
-                           <label for="maxprice">Max Price</label>
-                          <select class="form-control">
-                            <option>$8,200</option>
-                            <option>$11,700</option>
-                            <option>$14,150</option>
-                            <option>$21,110</option>
-                          </select>
-                    </div>
-                  </div>
-                  <!-- break -->
-                  <div class="col-md-3 col-sm-3 col-xs-6">
-                    <div class="form-group">
-                        <label for="type">Max KMs</label>
-                          <select class="form-control">
-                            <option>10,000</option>
-                            <option>25,000</option>
-                            <option>50,000</option>
-                            <option>75,000</option>
-                          </select>
-                    </div>
-                    <div class="form-group">
-                      <label for="maxprice">&nbsp;</label>
-                      <input type="submit" name="submit" value="Search" id="search-button" class="btn btn-warning btn-block">
-                    </div>
-                  </div>
+                  <!-- End Fitler Row-->
                 </form>
-              </div>
             </div>
           </div>
         </div>
@@ -115,7 +94,7 @@
       <div class="container">
         <div class="row">
           <!-- begin:article -->
-          <div class="col-md-9 col-md-push-3">
+         <!-- <div class="col-md-9 col-md-push-3"> -->
             <div class="row">
               <div class="col-md-12">
                 <div class="heading-title heading-title-alt">
@@ -161,17 +140,18 @@
             end:sorting -->
 
             <!-- begin:product -->
-            <div id="ad-list" class="row">
-            </div>
+            <div id="ad-list" class="row"></div>
+
             <div class="row text-center">
                 <img src="{% static "img/loading2.gif" %}" id="loading-indicator" style="color: yellow"/>
             </div>
             <!-- end:product -->
 
-          </div>
+          <!--</div>-->
           <!-- end:article -->
 
           <!-- begin:sidebar -->
+          <!--
           <div class="col-md-3 col-md-pull-9 sidebar">
             <div class="widget widget-sidebar widget-white panel">
               <div class="widget-header collapse-title">
@@ -187,7 +167,7 @@
                   </ul>
                     </div>
             </div>
-          </div>
+          </div>-->
           <!-- end:sidebar -->
 
         </div>
@@ -211,5 +191,8 @@
 {% endblock %}
 
 {% block scripts %}
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script type="text/javascript" src="{% static "js/search.js" %}"></script>
 {% endblock %}
