--- a/static/css/style.css
+++ b/static/css/style.css
@@ -314,9 +314,26 @@ input[type="color"]:focus,
     margin-right: 40px;
 }
 
- .text-center-xs {
+.text-center-xs {
     text-align: center;
   }
+
+.slider-display {
+    border:0;
+    color:#F6BE00;
+    font-weight:bold;
+    text-align: center;
+}
+
+.form-control[readonly] {
+    cursor: auto;
+    background-color: #fff;
+}
+
+.slider-range {
+    position: relative;
+    margin-top: 40px;
+}
 
 /*
 	==================
@@ -613,7 +630,6 @@ input[type="color"]:focus,
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
-
 
 
 /*
